[tool.poetry]
name = "paas-devops"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "~3.8"
Django = "==3.1.8"
djangorestframework = "^3.12.2"
whitenoise = "^5.2.0"
django-filter = "^2.4.0"
django-autocomplete-light = "^3.8.1"
django-crum = "^0.7.9"
django-crispy-forms = "^1.10.0"
django-guardian = "^2.3.0"
django-reversion = "^3.0.8"
django-tables2 = "^2.3.3"
djangorestframework-csv = "^2.1.0"
djangorestframework-xml = "^2.0.0"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"
lxml = "^4.6.2"
convertdate = "^2.3.0"
PyYAML = "^5.3.1"
rdflib = "^5.0.0"
drf-spectacular = "^0.11.1"
tablib = "^3.0.0"
regex = "^2020.11.13"
requests = "^2.25.0"
sentry-sdk = "^0.19.5"
SPARQLWrapper = "^1.8.5"
unicodecsv = "^0.14.1"
django-model-utils = "^4.1.1"
django-summernote = "^0.8.11"
djangorestframework-jsonschema = "^0.1.1"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
acdh-django-charts = "^0.5.3"
pandas = "0.25.3"
django-allow-cidr = "^0.3.1"
apis-core = "~0.16.33"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
openpyxl = "^3.0.7"
graphviz = "^0.17"
scikit-learn = "^0.24.2"
django-csp = "^3.7"
dephell = "^0.8.3"
apis-highlighter = "^0.8.18"
apis-bibsonomy = "^0.2.3"
viecpro-vis = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-extensions = "^3.1.0"
pylint = "^2.6.0"
dephell = {extras = ["full"], version = "^0.8.3"}
jupyter = "^1.0.0"
jupyter-tabnine = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
